Added support for changing a context
